# Library-Management-System

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-frontend.yml  deploy.yml
app/: main.py
app/api/v1/: admin.py  auth.py  books.py  health.py  loans.py
app/auth/: dependencies.py  jwt.py  oauth.py
app/core/: config.py  logging.py
app/db/: base.py  seed.py  session.py
app/models/: __init__.py  book.py  loan.py  user.py
app/schemas/: __init__.py  ai.py  book.py  loan.py  user.py
app/services/: ai.py  book.py  library_chat.py  loan.py  semantic_search.py  user.py
app/tests/: conftest.py  test_ai.py  test_auth.py  test_books.py  test_db.py  test_health.py  test_library_chat.py  test_loans.py  test_rbac.py  test_semantic_search.py
docs/: swagger.json
frontend/: .env.example  README.md  index.html  netlify.toml  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  AuthContext.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: BookCard.tsx  Navbar.tsx  Pagination.tsx
frontend/src/pages/: AISearch.tsx  Admin.tsx  AuthCallback.tsx  BookDetail.tsx  Books.tsx  CreateEditBook.tsx  LibraryChat.tsx  Loans.tsx  Login.tsx
migrations/: env.py
migrations/versions/: 6998e959_initial_schema.py
